# snnsim

./: Cargo.toml  README.md  hold.txt  one.py  todo.md  two.py
examples/: row_column_conversion.rs
src/: encode.rs  lib.rs  mnist.rs  net.rs
src/cuda/: mod.rs  net.rs
src/cuda/kernels/: abs_diff.rs  add.rs  div.rs  foreprop.rs  hadamard.rs  mod.rs  output_error.rs  surrogate.rs  weight_update.rs
src/cuda/kernels/cuda_kernels/: abs_diff.cu  div.cu  foreprop.cu  hadamard.cu  output_error.cu  surrogate.cu  weight_update.cu
tests/: mnist.rs  xor.rs
