[package]
name = "snnsim"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
rand = "0.9.1"
cudarc = { git = "https://github.com/JonathanWoollett-Light/cudarc", rev="662b08a92c1db9c1530c8dcae498ec904f05842d", features = ["cuda-version-from-build-system"] }

reqwest = { version = "0.12.19", optional = true, features = ["blocking"] }
flate2 = { version = "1.1.2", optional = true }
byteorder = { version = "1.5.0", optional = true }

[dev-dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
rand = "0.9.1"
indicatif = "0.17.11"

[features]
default = ["mnist"]
mnist = ["reqwest","flate2","byteorder"]